js/cpdParser.js
// Generated from cpd.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var cpdListener = require('./cpdListener').cpdListener;
var cpdVisitor = require('./cpdVisitor').cpdVisitor;

var grammarFileName = "cpd.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null, 
                     "','", "'('", "')'", "':'", "'='", null, "'+'", "'/'", 
                     "'*'", "'%'", null, null, null, null, null, null, null, 
                     null, null, "'TO'" ];

var symbolicNames = [ null, "END", "IF", "THEN", "ELSE", "ENDIF", "ELSEIF", 
                      "DO", "ENDDO", "COMMA", "LPAR", "RPAR", "COLON", "ASSIGN", 
                      "MINUS", "PLUS", "DIV", "STAR", "MOD", "NOT", "AND", 
                      "OR", "LT", "LE", "GT", "GE", "NE", "EQ", "TO", "VARNAME", 
                      "INT", "EOL", "WS" ];

var ruleNames =  [ "compileUnit", "stmt", "do_stmt", "if_stmt", "block_if_stmt", 
                   "first_if_block", "else_if_stmt", "else_stmt", "assign_stmt", 
                   "empty_stmt", "expr", "or_expr", "and_expr", "eq_expr", 
                   "add_expr", "mult_expr", "final_expr", "array", "varname", 
                   "value" ];

function cpdParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

cpdParser.prototype = Object.create(antlr4.Parser.prototype);
cpdParser.prototype.constructor = cpdParser;

Object.defineProperty(cpdParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

cpdParser.EOF = antlr4.Token.EOF;
cpdParser.END = 1;
cpdParser.IF = 2;
cpdParser.THEN = 3;
cpdParser.ELSE = 4;
cpdParser.ENDIF = 5;
cpdParser.ELSEIF = 6;
cpdParser.DO = 7;
cpdParser.ENDDO = 8;
cpdParser.COMMA = 9;
cpdParser.LPAR = 10;
cpdParser.RPAR = 11;
cpdParser.COLON = 12;
cpdParser.ASSIGN = 13;
cpdParser.MINUS = 14;
cpdParser.PLUS = 15;
cpdParser.DIV = 16;
cpdParser.STAR = 17;
cpdParser.MOD = 18;
cpdParser.NOT = 19;
cpdParser.AND = 20;
cpdParser.OR = 21;
cpdParser.LT = 22;
cpdParser.LE = 23;
cpdParser.GT = 24;
cpdParser.GE = 25;
cpdParser.NE = 26;
cpdParser.EQ = 27;
cpdParser.TO = 28;
cpdParser.VARNAME = 29;
cpdParser.INT = 30;
cpdParser.EOL = 31;
cpdParser.WS = 32;

cpdParser.RULE_compileUnit = 0;
cpdParser.RULE_stmt = 1;
cpdParser.RULE_do_stmt = 2;
cpdParser.RULE_if_stmt = 3;
cpdParser.RULE_block_if_stmt = 4;
cpdParser.RULE_first_if_block = 5;
cpdParser.RULE_else_if_stmt = 6;
cpdParser.RULE_else_stmt = 7;
cpdParser.RULE_assign_stmt = 8;
cpdParser.RULE_empty_stmt = 9;
cpdParser.RULE_expr = 10;
cpdParser.RULE_or_expr = 11;
cpdParser.RULE_and_expr = 12;
cpdParser.RULE_eq_expr = 13;
cpdParser.RULE_add_expr = 14;
cpdParser.RULE_mult_expr = 15;
cpdParser.RULE_final_expr = 16;
cpdParser.RULE_array = 17;
cpdParser.RULE_varname = 18;
cpdParser.RULE_value = 19;


function CompileUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_compileUnit;
    return this;
}

CompileUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CompileUnitContext.prototype.constructor = CompileUnitContext;

CompileUnitContext.prototype.EOF = function() {
    return this.getToken(cpdParser.EOF, 0);
};

CompileUnitContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

CompileUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterCompileUnit(this);
	}
};

CompileUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitCompileUnit(this);
	}
};

CompileUnitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitCompileUnit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.CompileUnitContext = CompileUnitContext;

cpdParser.prototype.compileUnit = function() {

    var localctx = new CompileUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, cpdParser.RULE_compileUnit);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 41; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 40;
            this.stmt();
            this.state = 43; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << cpdParser.IF) | (1 << cpdParser.DO) | (1 << cpdParser.VARNAME) | (1 << cpdParser.EOL))) !== 0));
        this.state = 45;
        this.match(cpdParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_stmt;
    return this;
}

StmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtContext.prototype.constructor = StmtContext;

StmtContext.prototype.do_stmt = function() {
    return this.getTypedRuleContext(Do_stmtContext,0);
};

StmtContext.prototype.EOL = function() {
    return this.getToken(cpdParser.EOL, 0);
};

StmtContext.prototype.if_stmt = function() {
    return this.getTypedRuleContext(If_stmtContext,0);
};

StmtContext.prototype.assign_stmt = function() {
    return this.getTypedRuleContext(Assign_stmtContext,0);
};

StmtContext.prototype.empty_stmt = function() {
    return this.getTypedRuleContext(Empty_stmtContext,0);
};

StmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterStmt(this);
	}
};

StmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitStmt(this);
	}
};

StmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.StmtContext = StmtContext;

cpdParser.prototype.stmt = function() {

    var localctx = new StmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, cpdParser.RULE_stmt);
    try {
        this.state = 59;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case cpdParser.DO:
            this.enterOuterAlt(localctx, 1);
            this.state = 47;
            this.do_stmt();
            this.state = 48;
            this.match(cpdParser.EOL);
            break;
        case cpdParser.IF:
            this.enterOuterAlt(localctx, 2);
            this.state = 50;
            this.if_stmt();
            this.state = 51;
            this.match(cpdParser.EOL);
            break;
        case cpdParser.VARNAME:
            this.enterOuterAlt(localctx, 3);
            this.state = 53;
            this.assign_stmt();
            this.state = 54;
            this.match(cpdParser.EOL);
            break;
        case cpdParser.EOL:
            this.enterOuterAlt(localctx, 4);
            this.state = 56;
            this.empty_stmt();
            this.state = 57;
            this.match(cpdParser.EOL);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Do_stmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_do_stmt;
    return this;
}

Do_stmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Do_stmtContext.prototype.constructor = Do_stmtContext;

Do_stmtContext.prototype.DO = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cpdParser.DO);
    } else {
        return this.getToken(cpdParser.DO, i);
    }
};


Do_stmtContext.prototype.varname = function() {
    return this.getTypedRuleContext(VarnameContext,0);
};

Do_stmtContext.prototype.EOL = function() {
    return this.getToken(cpdParser.EOL, 0);
};

Do_stmtContext.prototype.ENDDO = function() {
    return this.getToken(cpdParser.ENDDO, 0);
};

Do_stmtContext.prototype.ASSIGN = function() {
    return this.getToken(cpdParser.ASSIGN, 0);
};

Do_stmtContext.prototype.eq_expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Eq_exprContext);
    } else {
        return this.getTypedRuleContext(Eq_exprContext,i);
    }
};

Do_stmtContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(cpdParser.COMMA);
    } else {
        return this.getToken(cpdParser.COMMA, i);
    }
};


Do_stmtContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

Do_stmtContext.prototype.END = function() {
    return this.getToken(cpdParser.END, 0);
};

Do_stmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterDo_stmt(this);
	}
};

Do_stmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitDo_stmt(this);
	}
};

Do_stmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitDo_stmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.Do_stmtContext = Do_stmtContext;

cpdParser.prototype.do_stmt = function() {

    var localctx = new Do_stmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, cpdParser.RULE_do_stmt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this.match(cpdParser.DO);
        this.state = 62;
        this.varname();
        this.state = 71;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===cpdParser.ASSIGN) {
            this.state = 63;
            this.match(cpdParser.ASSIGN);
            this.state = 64;
            this.eq_expr();
            this.state = 65;
            this.match(cpdParser.COMMA);
            this.state = 66;
            this.eq_expr();
            this.state = 69;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===cpdParser.COMMA) {
                this.state = 67;
                this.match(cpdParser.COMMA);
                this.state = 68;
                this.eq_expr();
            }

        }

        this.state = 73;
        this.match(cpdParser.EOL);
        this.state = 75; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 74;
            this.stmt();
            this.state = 77; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << cpdParser.IF) | (1 << cpdParser.DO) | (1 << cpdParser.VARNAME) | (1 << cpdParser.EOL))) !== 0));
        this.state = 82;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case cpdParser.ENDDO:
            this.state = 79;
            this.match(cpdParser.ENDDO);
            break;
        case cpdParser.END:
            this.state = 80;
            this.match(cpdParser.END);
            this.state = 81;
            this.match(cpdParser.DO);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function If_stmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_if_stmt;
    return this;
}

If_stmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
If_stmtContext.prototype.constructor = If_stmtContext;

If_stmtContext.prototype.IF = function() {
    return this.getToken(cpdParser.IF, 0);
};

If_stmtContext.prototype.LPAR = function() {
    return this.getToken(cpdParser.LPAR, 0);
};

If_stmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

If_stmtContext.prototype.RPAR = function() {
    return this.getToken(cpdParser.RPAR, 0);
};

If_stmtContext.prototype.block_if_stmt = function() {
    return this.getTypedRuleContext(Block_if_stmtContext,0);
};

If_stmtContext.prototype.assign_stmt = function() {
    return this.getTypedRuleContext(Assign_stmtContext,0);
};

If_stmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterIf_stmt(this);
	}
};

If_stmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitIf_stmt(this);
	}
};

If_stmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitIf_stmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.If_stmtContext = If_stmtContext;

cpdParser.prototype.if_stmt = function() {

    var localctx = new If_stmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, cpdParser.RULE_if_stmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(cpdParser.IF);
        this.state = 85;
        this.match(cpdParser.LPAR);
        this.state = 86;
        this.expr();
        this.state = 87;
        this.match(cpdParser.RPAR);
        this.state = 90;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case cpdParser.THEN:
            this.state = 88;
            this.block_if_stmt();
            break;
        case cpdParser.VARNAME:
            this.state = 89;
            this.assign_stmt();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Block_if_stmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_block_if_stmt;
    return this;
}

Block_if_stmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Block_if_stmtContext.prototype.constructor = Block_if_stmtContext;

Block_if_stmtContext.prototype.first_if_block = function() {
    return this.getTypedRuleContext(First_if_blockContext,0);
};

Block_if_stmtContext.prototype.ENDIF = function() {
    return this.getToken(cpdParser.ENDIF, 0);
};

Block_if_stmtContext.prototype.else_if_stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Else_if_stmtContext);
    } else {
        return this.getTypedRuleContext(Else_if_stmtContext,i);
    }
};

Block_if_stmtContext.prototype.else_stmt = function() {
    return this.getTypedRuleContext(Else_stmtContext,0);
};

Block_if_stmtContext.prototype.END = function() {
    return this.getToken(cpdParser.END, 0);
};

Block_if_stmtContext.prototype.IF = function() {
    return this.getToken(cpdParser.IF, 0);
};

Block_if_stmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterBlock_if_stmt(this);
	}
};

Block_if_stmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitBlock_if_stmt(this);
	}
};

Block_if_stmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitBlock_if_stmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.Block_if_stmtContext = Block_if_stmtContext;

cpdParser.prototype.block_if_stmt = function() {

    var localctx = new Block_if_stmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, cpdParser.RULE_block_if_stmt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 92;
        this.first_if_block();
        this.state = 96;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 93;
                this.else_if_stmt(); 
            }
            this.state = 98;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
        }

        this.state = 100;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===cpdParser.ELSE) {
            this.state = 99;
            this.else_stmt();
        }

        this.state = 105;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case cpdParser.ENDIF:
            this.state = 102;
            this.match(cpdParser.ENDIF);
            break;
        case cpdParser.END:
            this.state = 103;
            this.match(cpdParser.END);
            this.state = 104;
            this.match(cpdParser.IF);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function First_if_blockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_first_if_block;
    return this;
}

First_if_blockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
First_if_blockContext.prototype.constructor = First_if_blockContext;

First_if_blockContext.prototype.THEN = function() {
    return this.getToken(cpdParser.THEN, 0);
};

First_if_blockContext.prototype.EOL = function() {
    return this.getToken(cpdParser.EOL, 0);
};

First_if_blockContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

First_if_blockContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterFirst_if_block(this);
	}
};

First_if_blockContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitFirst_if_block(this);
	}
};

First_if_blockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitFirst_if_block(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.First_if_blockContext = First_if_blockContext;

cpdParser.prototype.first_if_block = function() {

    var localctx = new First_if_blockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, cpdParser.RULE_first_if_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this.match(cpdParser.THEN);
        this.state = 108;
        this.match(cpdParser.EOL);
        this.state = 110; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 109;
            this.stmt();
            this.state = 112; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << cpdParser.IF) | (1 << cpdParser.DO) | (1 << cpdParser.VARNAME) | (1 << cpdParser.EOL))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Else_if_stmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_else_if_stmt;
    return this;
}

Else_if_stmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Else_if_stmtContext.prototype.constructor = Else_if_stmtContext;

Else_if_stmtContext.prototype.LPAR = function() {
    return this.getToken(cpdParser.LPAR, 0);
};

Else_if_stmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

Else_if_stmtContext.prototype.RPAR = function() {
    return this.getToken(cpdParser.RPAR, 0);
};

Else_if_stmtContext.prototype.THEN = function() {
    return this.getToken(cpdParser.THEN, 0);
};

Else_if_stmtContext.prototype.EOL = function() {
    return this.getToken(cpdParser.EOL, 0);
};

Else_if_stmtContext.prototype.ELSEIF = function() {
    return this.getToken(cpdParser.ELSEIF, 0);
};

Else_if_stmtContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

Else_if_stmtContext.prototype.ELSE = function() {
    return this.getToken(cpdParser.ELSE, 0);
};

Else_if_stmtContext.prototype.IF = function() {
    return this.getToken(cpdParser.IF, 0);
};

Else_if_stmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterElse_if_stmt(this);
	}
};

Else_if_stmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitElse_if_stmt(this);
	}
};

Else_if_stmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitElse_if_stmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.Else_if_stmtContext = Else_if_stmtContext;

cpdParser.prototype.else_if_stmt = function() {

    var localctx = new Else_if_stmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, cpdParser.RULE_else_if_stmt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case cpdParser.ELSEIF:
            this.state = 114;
            this.match(cpdParser.ELSEIF);
            break;
        case cpdParser.ELSE:
            this.state = 115;
            this.match(cpdParser.ELSE);
            this.state = 116;
            this.match(cpdParser.IF);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 119;
        this.match(cpdParser.LPAR);
        this.state = 120;
        this.expr();
        this.state = 121;
        this.match(cpdParser.RPAR);
        this.state = 122;
        this.match(cpdParser.THEN);
        this.state = 123;
        this.match(cpdParser.EOL);
        this.state = 125; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 124;
            this.stmt();
            this.state = 127; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << cpdParser.IF) | (1 << cpdParser.DO) | (1 << cpdParser.VARNAME) | (1 << cpdParser.EOL))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Else_stmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_else_stmt;
    return this;
}

Else_stmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Else_stmtContext.prototype.constructor = Else_stmtContext;

Else_stmtContext.prototype.ELSE = function() {
    return this.getToken(cpdParser.ELSE, 0);
};

Else_stmtContext.prototype.EOL = function() {
    return this.getToken(cpdParser.EOL, 0);
};

Else_stmtContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

Else_stmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.enterElse_stmt(this);
	}
};

Else_stmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof cpdListener ) {
        listener.exitElse_stmt(this);
	}
};

Else_stmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof cpdVisitor ) {
        return visitor.visitElse_stmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




cpdParser.Else_stmtContext = Else_stmtContext;

cpdParser.prototype.else_stmt = function() {

    var localctx = new Else_stmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, cpdParser.RULE_else_stmt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129;
        this.match(cpdParser.ELSE);
        this.state = 130;
        this.match(cpdParser.EOL);
        this.state = 132; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 131;
            this.stmt();
            this.state = 134; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << cpdParser.IF) | (1 << cpdParser.DO) | (1 << cpdParser.VARNAME) | (1 << cpdParser.EOL))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Assign_stmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = cpdParser.RULE_assign_stmt;
    return this;
}

Assign_stmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Assign_stmtContext.prototype.constructor = Assign_stmtContext;

Assign_stmtContext.prototype.array = function() {
    return this.getTypedRuleContext(ArrayContext,0);
};

Assign_stmtContext.prototype.ASSIGN = function() {
    return this.getToken(cpdParser.ASSIGN, 0);
};

Assign_stmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

Assign_stmtContext.prototype.varname = function() {
    return this.getTypedRuleContext(VarnameContext,0);
};
